# rust-memory-game

./: Cargo.toml  README.md  index-2264a55da4f84636.css  index-635eacf9bd2057e4.js  index-635eacf9bd2057e4_bg.wasm  index-a14ac7821660c64a.css  index-b0b881a32353cde1.js  index-b0b881a32353cde1_bg.wasm  index-e2f689ee5b857835.css  index.html  index.scss  package.json
src/: components.rs  constant.rs  helper.rs  main.rs  state.rs
src/components/: app.rs  chess_board_card.rs  chessboard.rs  chessboard_card.rs  game_status_board.rs  score_board.rs  score_board_best_score.rs  score_board_logo.rs  score_board_progress.rs
