[package]
name = "rust-memory-game"
version = "1.0.0"
edition = "2021"
authors = ["Howard.Zuo <leftstick@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"
gloo = "0.4"
yew = "0.18"
nanoid = "0.4"
log = "0.4.6"
wasm-logger = "0.2.0"
rand = "0.8"
settimeout= "0.1"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
